Fix touch-action css

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80 default_server;
-    server_name localhost;
+    # server_name localhost;
     root /var/app;
     index index.php index.html;
 
