Fix NGINX version 1.15.8

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,7 +1,4 @@
-FROM nginx
-
+FROM nginx:1.15.8
 ADD ./default.conf /etc/nginx/conf.d/
-
 RUN echo "daemon off;" >> /etc/nginx/nginx.conf
-
 CMD service nginx start
